--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/music---4web.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/music---4web.org
@@ -8,5 +8,5 @@ Music
 
 * Abstract
 
-Fans can be live at the performance, on stage, and with the band! The get to be in the action more intimately than ever, which build brand affinity and recall. Make peoples' dreams come true!
+Fans can be live at the performance, on stage, and with the band! The get to be in the action more intimately than ever, which build brand affinity and recall. Make peoples' dreams come true! Never before could you interact so closely with music digitally, with the possibility to make the whole world change around you as the song does. 
 
