--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/7Transportation.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/7Transportation.org
@@ -8,4 +8,4 @@ Seamless Virtual Travel
 
 * Abstract
 
-XR is the ultimate travel-branding tool.  You have full control over the travel experience - untapped potential in the industry. The fun is hardly the destination but how we arrive there, soaking in the glories and tribulations along the way.
+XR is the ultimate travel-branding tool.  You have full control over the travel experience - untapped potential in the industry. The fun is hardly the destination but how we arrive there, soaking in the glories and tribulations along the way. Bring in-flight entertainment to new horizons by introducing VR content. 
