--- a/producttable.org
+++ b/producttable.org
@@ -9,7 +9,7 @@
  | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | -     | +      | +    | +   | -    | +      | -  | +    | y              | bloomaway     | +      | +       | +        | +           | -  |
  | 9. live forever           | immortalize             | 3d avatar                  | march 1 | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 10. enterprise b2b        | sales preentation       | inside product             |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | +     | +     | -   | -   | -       | +    | +     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 12. festival              | Live Event Marketing    | microar + perform on stage |         | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | +      | +    | -   | -    | +      | +  | -    | accounting     | no            | no     | +       | +        | +           | -  |
  | 13. wellness              | Mindfullness in VR      | nature                     |         | -     | +     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | -  |
  | 14. 3d brand design       | 3d brand design         | 3d files                   |         | -     | -     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | -  |
