--- a/producttable.org
+++ b/producttable.org
@@ -20,7 +20,7 @@
  | 19. fifa                  |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | --  | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 20. foodman               |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 21. health care           |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 22. hotels                | sell brand hotel rooms  | bloomaway                  |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | 22. hotels                | sell brand hotel rooms  | bloomaway                  |         | +     | +     | -   | -   | -       | -    | -     | +  | +   | +     | -      | -    | -   | -    | +      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 23. in vr                 |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 24. sports                | training                | on-feild sim               |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 25. token sale            |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
