--- a/Pages/1Solutions/3Publications/publicationstext---4web.org
+++ b/Pages/1Solutions/3Publications/publicationstext---4web.org
@@ -9,6 +9,8 @@ Publications
 - Market Research
 - Technology Reports
 
+These Publications are to serve as in depth resources for better understanding financial strategies and strategizing market entry.  They a part of the free resources Nova provides to the community at large.
+
 * Abstract
 
 - Festival Fin Strat
