--- a/Pages/3About nova/1Who we are/whoweare---4web.org
+++ b/Pages/3About nova/1Who we are/whoweare---4web.org
@@ -12,7 +12,7 @@ Who We Are
 
 * Abstract
 
-Nova XR is a team of artists and technicians programming new media.  Our specialty is XR (Extended Reality).  We develop from the 4th floor of the 19th century Beard Street Warehouses in Brooklyn, New York.  
+Nova XR is a team of artists and technicians who program new media.  Our specialty is XR (Extended Reality).  We develop from the 4th floor of the 19th century Beard Street Warehouses in Brooklyn, New York.  
 
 "Nova" is latin for /new/, contrasting the future with fundamentals. We chose the name because it is simple, versatile, and expressive of our approach to innovate media technologies.   
 
