--- a/Pages/2Services/2Develope/1Program/+program---4web.org
+++ b/Pages/2Services/2Develope/1Program/+program---4web.org
@@ -4,7 +4,7 @@ Game Engine
 
 * Second
 
-A *game engine* is a software framework used to create interactive 3D media (XR).  We build XR in game engines.  
+Programming is centralized in a *game engine* is a software framework used to create interactive 3D media (XR).  We build XR in game engines.  
 
 * Abstract 
 
