--- a/Pages/3About nova/1Who we are/Community---4web.org
+++ b/Pages/3About nova/1Who we are/Community---4web.org
@@ -3,6 +3,9 @@
 Community
 
 * Second
+Community 
+Our open door philosophy attracts a range of people from various communities. This makes the Nova Studios an idea hub to be crafted into market opportunities. 
+
 
 * Abstract
 
