--- a/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/bloomaway_golive.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/bloomaway_golive.org
@@ -7,7 +7,7 @@ With the first step into Virtual Reality comes uncertainty, so we created Blooma
 Bloomaway smooths the transition into VR. By eliminating controllers, this internally developed software responds to manual action and optical focus, empowering users to dictate pace and destination. 
 
 **** Virtual 
-Dizziness in VR results from scene shifts within the user's vantage point. Bloomaway's response is to load environment transitions outside the user's sightline. See the map, touch the destination, turn 180 degrees, and you've arrived. Dreamscape across nations and overseas with touch a sight.
+Dizziness in VR results from scene shifts within user vantage point. Bloomaway's response is to load environment transitions outside the user's sightline. See the map, touch the destination, turn 180 degrees, and you've arrived. Dreamscape across nations and overseas with touch a sight.
 
 **** Transport 
-Bloomaway reduces business travel expenses (like those associated with employee relocation), displaying properties, schools, car dealerships, city buildings, and providing general area orientation inside the virtual world. While some experiences cannot be replaced with VR, others merge with it to reduce travel requirements and maximize time efficiency. Bloomaway brings parts of the world into VR and takes you there. 
+Bloomaway reduces business travel expenses (like those associated with employee relocation), displaying properties, schools, car dealerships, city buildings, and providing general area orientation in VR. While some experiences cannot be replaced with Virtual Reality, others merge with it to reduce travel demands and maximize time efficiency. Bloomaway ports destinations into VR and brings you there. 
