--- a/Pages/1Solutions/2Consultation/2Cross Industry/1Marketing.org
+++ b/Pages/1Solutions/2Consultation/2Cross Industry/1Marketing.org
@@ -28,3 +28,36 @@ There is no industry that will seize the future of XR more deeply than marketing
 ** Data
 - Collecting
 - Applying
+
+** Saturation
+- market not saturated by advertising content 
+- people are upper middle class 
+- generalize 
+  Males
+  18-24
+  Tech involvement 
+  60-100K household income 
+- fast moving consumer goods 
+  food and drinks 
+
+** Pr stunting 
+- procedurely generated 
+- endless mode with online high scores 
+- interconnectivity 
+
+*** Convo with steve Tuesday 
+
+- unique in your own market 
+
+What can we do to attract places like mountain dew
+
+demographic 
+untapped market
+exclusivity 
+
+
+
+current uses 
+specific VR feature
+results
+visual description 
