--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
@@ -1,26 +1,24 @@
 
 **  The Exterior 
 
-As content creators transition to VR they're met with the challenge of presentation. The Infinite Gallery is an original VR interface built to display content linearly and the first step in creating customized Virtual architecture.
+As content creators transition to VR they're met with the challenge of presentation. The Infinite Gallery, our original VR interface, is built to display content linearly. It's step one in creating customized Virtual architecture.
 
 ** Welcome Inside
 
-The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates user movement. Remove the finger to stop movement. Continue this way to navigate the entire architectural structure. Just as with real world movement, the user can apply 360-degree viewing. 
-
+The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates user movement. Remove the finger to stop movement. Continue like this to navigate the entire architectural structure. Just as with real world movement, the user can move their head to access 360-degree viewing. 
 
 ** What to Display
 
-Capable of hosting an unlimited content library, The Infinite Gallery is prepared to welcome original display ideas. You may hang products on the walls, show content behind glass window panes, create the doorway to another dimension, and build the second floor (or backyard) of your company's customized architecture. 
+Capable of hosting an unlimited content library, The Infinite Gallery is prepared for original display ideas. You may hang products on the wall, show content behind glass window panes, create the doorway to another dimension, or build the second floor of your company's customized structure. 
 
-** How it's applied to business
-This interface is immediately applicable for visual artwork. Photographers wishing to display three-dimensionally, galleries aiming to scale beyond a physical location, and virtual artists who create VR-ready art from scratch. 
+** In Business
 
-**** Business Solutions
+This interface is immediately applicable for basic 3D marketing. Regardless of file type, any visual content can be ported into the Infinite Gallery. Photographers wishing to display in 3D, galleries scaling beyond their physical location, and 3D artists creating VR-ready content from scratch are among the early adopters. 
 
-Some of the most accessible ways in which the Gallery is used among businesses are by displaying company products on the Virtual Walls or by decorating the space with visuals of company history. In the case of company history (or any linear story), 3D audio is a feature that greatly enhances the user experience. 
+** Provide Access
 
-Like many of our interfaces, the future applications of the Infinite Gallery appear unlimited. As the Virtual World continues developing and expands both upon itself and within our society, the Infinite Gallery will become a natural marketplace for businesses. Much like the evolution of ecommerce on the 2D screen, customers will be able to choose (and process their payment for) the products available on the walls of the Infinite Gallery. 
+At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his "Five and Dime" drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth was the first to display drugstore products on publicly accessible shelves, initiating a physical connection with the products. 
 
-Reflecting further on the evolution of commerce, F.W. Woolworth initiated a similar psychological adjustment at the beginning of the 20th century, changing the way customers interact with products in brick and mortar stores. Throughout the history of American drug stores, whether it was a can of soda or tube of toothpaste, the customer had to request the product from the clerk, who would then go and retrieve the product from the back of the store. Woolworth turned this concept inside out with his "five and dime" stores. He brought the products out from behind the counter and displayed them on shelves, so customers could touch them, hold them, and develop a heightened connection with them. Going forward - and to this day - this format is the default arrangement in retail stores around the world. 
+** Display the Story
 
-Among many other applications, the Infinite Gallery facilitates the evolution of ecommerce in a similar way - bringing the products off the 2D screen and in to the hands of virtual customers. 
+The Infinite Gallery is a linear display interface. Upon reaching the end of your story, the user has connected with the feeling of your brand.
