--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
@@ -5,7 +5,7 @@ As content creators transition to VR they're met with the challenge of presentat
 
 ** Welcome Inside
 
-The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates user movement. Remove the finger to stop movement. Continue like this to navigate the entire architectural structure. Just as with real world movement, the user can move their head to access 360-degree viewing. 
+The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates user movement. Remove your finger to stop movement. Continue like this to navigate the entire architectural structure. Just as in the real world, users can move their head to access 360-degree viewing. 
 
 ** What to Display
 
@@ -17,8 +17,8 @@ This interface is immediately applicable for basic 3D marketing. Regardless of f
 
 ** Provide Access
 
-At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his "Five and Dime" drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth was the first to display drugstore products on publicly accessible shelves, initiating a physical connection with the products. 
+At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his "Five and Dime" drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth was the first to display drugstore products on publicly accessible shelves, initiating a physical and emotional between his goods and his customers.  
 
-** Display the Story
+** Show Your Story 
 
-The Infinite Gallery is a linear display interface. Upon reaching the end of your story, the user has connected with the feeling of your brand.
+The Infinite Gallery is a linear display interface in 3D. Upon reaching the end of your story, the user has connected with the feeling of your brand.
