Small change to April launch

--- a/Pages/1Solutions/1Products/Jan Launch/New Years Eve [DONE]/Description.org
+++ b/Pages/1Solutions/1Products/Jan Launch/New Years Eve [DONE]/Description.org
@@ -20,5 +20,5 @@ Destinations working to attract visitors may display their culture, infrastructu
 
 ** Introduce
 
-Teleportation to show real people real destinations on the last night of the year. Make global use of VR's live stream potential.  
+Virtual Teleportation to show real people real destinations on the last night of the year. Make global use of VR's live stream potential.  
 
